--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -416,12 +416,12 @@ nginx_config:                     # Config for render the template to generate n
 #    ### multi-cluster mode ###
 
 graphql:
-  max_size: 1048576               # the maximum size limitation of graphql in bytes, default 1MiB
+  max_size: 1048576                # Set the maximum size limitation of graphql in bytes. Default to 1MiB.
 
-#ext-plugin:
-  #cmd: ["ls", "-l"]
+# ext-plugin:
+#   cmd: ["ls", "-l"]
 
-plugins:                          # plugin list (sorted by priority)
+plugins:                           # plugin list (sorted by priority)
   - real-ip                        # priority: 23000
   - ai                             # priority: 22900
   - client-control                 # priority: 22000
@@ -510,7 +510,7 @@ plugins:                          # plugin list (sorted by priority)
   - ext-plugin-post-req            # priority: -3000
   - ext-plugin-post-resp           # priority: -4000
 
-stream_plugins: # sorted by priority
+stream_plugins:                    # stream plugin list (sorted by priority)
   - ip-restriction                 # priority: 3000
   - limit-conn                     # priority: 1003
   - mqtt-proxy                     # priority: 1000
@@ -518,27 +518,28 @@ stream_plugins: # sorted by priority
   - syslog                         # priority: 401
   # <- recommend to use priority (0, 100) for your custom plugins
 
-#wasm:
-  #plugins:
-    #- name: wasm_log
-      #priority: 7999
-      #file: t/wasm/log/main.go.wasm
+# wasm:
+#   plugins:
+#     - name: wasm_log
+#       priority: 7999
+#       file: t/wasm/log/main.go.wasm
 
-#xrpc:
-  #protocols:
-    #- name: pingpong
+# xrpc:
+#   protocols:
+#     - name: pingpong
 
-plugin_attr:
-  log-rotate:
-    interval: 3600    # rotate interval (unit:sond)
-    max_kept: 168     # max number of log files will be kept
-    max_size: -1      # max size bytes of log files to be rotated, size check would be skipped with a value less than 0
-    enable_compression: false    # enable log file compression(gzip) or not, default false
-  skywalking:
-    service_name: APISIX
-    service_instance_name: APISIX Instance Name
-    endpoint_addr: http://127.0.0.1:12800
-  opentelemetry:
+plugin_attr:          # Plugin attributes
+  log-rotate:         # Plugin: log-rotate
+    interval: 3600    # Set the log rotate interval in seconds.
+    max_kept: 168     # Set the maximum number of log files to keep. If exceeded, historic logs are deleted.
+    max_size: -1      # Set the maximum size of log files in bytes before a rotation. 
+                      # Skip size check if max_size is less than 0.
+    enable_compression: false    # Compress (gzip) log files. Require tar to be available.
+  skywalking:                                     # Plugin: skywalking
+    service_name: APISIX                          # Set the service name for SkyWalking reporter.
+    service_instance_name: APISIX Instance Name   # Set the service instance name for SkyWalking reporter.
+    endpoint_addr: http://127.0.0.1:12800         # Set the SkyWalking HTTP endpoint.
+  opentelemetry:      # Plugin: opentelemetry
     trace_id_source: x-request-id
     resource:
       service.name: APISIX
@@ -553,14 +554,14 @@ plugin_attr:
       batch_timeout: 2
       inactive_timeout: 1
       max_export_batch_size: 16
-  prometheus:
+  prometheus:        # Plugin: prometheus
     export_uri: /apisix/prometheus/metrics
     metric_prefix: apisix_
     enable_export_server: true
     export_addr:
       ip: 127.0.0.1
       port: 9091
-    #metrics:
+    # metrics:
     #  http_status:
     #    # extra labels from nginx variables
     #    extra_labels:
